--- a/pom.xml
+++ b/pom.xml
@@ -8,5 +8,13 @@
     <artifactId>flat-file-reader</artifactId>
     <version>1.0</version>
 
+    <dependencies>
+	<dependency>
+		<groupId>junit</groupId>
+		<artifactId>junit</artifactId>
+		<version>4.11</version>
+	</dependency>
+    </dependencies>
+
     
 </project>
